# Order-Service

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  Justfile  README.md  TASK.md  docker-compose.yml  k8s-helper.skill  pyproject.toml
app/: main.py
order-service/: Dockerfile  alembic.ini  pyproject.toml
order-service/alembic/: env.py
order-service/alembic/versions/: 04776e704079_fix_order_status_pk.py  0a24d6873807_change_idempotency_key_to_text.py  74b645dcaca5_initial_db.py  85cb16f778f0_idempotency_key_table_add.py  a122cd2e3b6e_add_idempotency_key_to_outbox.py  fd4a4483508b_add_quantity_to_orders.py
order-service/app/: main.py
order-service/app/application/: container.py  interfaces.py
order-service/app/application/use_cases/: base.py
order-service/app/application/use_cases/order_usecases/: exceptions.py  order_create_usecase.py  order_dto.py  payment_callback_usecase.py
order-service/app/application/use_cases/outbox_usecases/: outbox_dto.py  outbox_events_usecase.py
order-service/app/application/use_cases/process_shipping_event/: shipping_event.py
order-service/app/config/: base_setting.py  capashino.py  config.py  database.py  kafka.py  logging.py  order_service.py
order-service/app/core/: models.py
order-service/app/infrastructure/: container.py  logging.py  unit_of_work.py
order-service/app/infrastructure/db/database_schemas/: idempotency.py  inbox.py  order.py  outbox.py
order-service/app/infrastructure/services/: exceptions.py
order-service/app/presentation/: container.py  outbox_worker.py
order-service/scripts/: run.sh
(+69 files in other folders)
