[project]
name = "pythonproject"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.49.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]
